<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imooie.maximum.StuffActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="@drawable/banner"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/banner">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="50dp"
                android:src="@drawable/logo_english" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_mount" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView4"
                android:layout_alignLeft="@+id/imageView3"
                android:layout_alignStart="@+id/imageView3"
                android:text="@string/bottom_bar_content" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/margin_10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/content_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_1_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_1_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_2_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_2_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_3_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_3_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_weight="1"
            android:text="@string/content_4_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/content_4_detail" />

    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/activity_bg_black"
        app:itemTextColor="@color/activity_bg_black"
        app:menu="@menu/bottom_navigation_view" />
</LinearLayout>

